<resources>
    <string name="app_name" translatable="false">MAD Meditation</string>
    <string name="welcome_text">Welcome to MAD Meditation</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="welcome_caps">Hello!</string>
    <string name="onboarding_subtitle">Hi?
    Hi?
    Hi!</string>
    <string name="login_btn">Log In</string>
    <string name="dont_have_account">Don\'t have an account yet? Sign up</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="register_link">Register</string>
    <string name="error_empty_fields">Please fill in all fields</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="welcome_back">Welcome back, Emil!</string>
    <string name="how_are_you">How are you feeling today?</string>
    <string name="calm">Calm</string>
    <string name="relax">Relax</string>
    <string name="focus">Focus</string>
    <string name="anxious">Anxious</string>
    <string name="exit_btn">exit</string>
    <string name="username">Emile</string>
    <string name="card_title">Focus Meditation</string>
    <string name="card_desc">A quick way to ground yourself and stay productive.</string>
    <string name="card_button">more</string>
    <string name="toast_meditation_click">Opening meditation details...</string>
    <string name="close_photo">close</string>
</resources>