<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253334">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_logo_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/avatar_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/welcome_back"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo_home" />

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_are_you"
                android:textColor="#A0A0A0"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

            <HorizontalScrollView
                android:id="@+id/hsv_feelings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/tv_question">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_calm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">
                        <ImageView
                            android:id="@+id/iv_calm"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/circle_bg"
                            android:padding="15dp"
                            android:src="@drawable/ic_calm" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calm"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_relax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">
                        <ImageView
                            android:id="@+id/iv_relax"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/circle_bg"
                            android:padding="15dp"
                            android:src="@drawable/ic_relax" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/relax"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_focus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">
                        <ImageView
                            android:id="@+id/iv_focus"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/circle_bg"
                            android:padding="15dp"
                            android:src="@drawable/ic_focus" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/focus"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_anxious"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">
                        <ImageView
                            android:id="@+id/iv_anxious"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/circle_bg"
                            android:padding="15dp"
                            android:src="@drawable/ic_anxious" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/anxious"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_quote"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="#F7F3F0"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/hsv_feelings">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_card_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card_title"
                        android:textColor="#253334"
                        android:textSize="22sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_card_image" />

                    <TextView
                        android:id="@+id/tv_card_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/card_desc"
                        android:textColor="#253334"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_card_title"
                        app:layout_constraintEnd_toStartOf="@+id/iv_card_image" />

                    <Button
                        android:id="@+id/btn_card_action"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:backgroundTint="#253334"
                        android:text="@string/card_button"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/iv_card_image"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/img_meditation_card"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#253334"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>